--- a/PPl3/Areas/User/Views/HomeUser/Comment.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Comment.cshtml
@@ -84,8 +84,8 @@
                                 <li class=""><button>Wishlist</button></li>
                                 <li><a href="#">Manage listings</a></li>
                                 <li><a href="#">Account</a></li>
-                                <li><a href="#">Gift Cards</a></li>
-                                <li><a href="#">Help Center</a></li>
+                                
+                                <li><a href="mailto:tnthotel2004@gmail.com">Help Center</a></li>
                                 <li><a href="#">Log out</a></li>
                             </ul>
                         </div>
