--- a/PPl3/ExtraFiles/assets/css/admin.css
+++ b/PPl3/ExtraFiles/assets/css/admin.css
@@ -458,7 +458,8 @@
 }
 
 .avatar img {
-    width: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 100%;
     border: 3px solid #ccc;
 }
