--- a/PPl3/Views/Home/Index.cshtml
+++ b/PPl3/Views/Home/Index.cshtml
@@ -28,9 +28,9 @@
                     <a href="/user/homeuser/signup">Sign Up</a>
                 </button>
             </li>
-            <li><a href="#">Gift Cards</a></li>
+           
             <li><a href="#">Airbnb your home</a></li>
-            <li><a href="#">Help Center</a></li>
+            <li><a href="mailto:tnthotel2004@gmail.com">Help Center</a></li>
         </ul>
     </div>
     @if (ViewBag.checkLogOut == true)
