--- a/PPl3/Areas/User/Views/HomeUser/profile.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/profile.cshtml
@@ -112,7 +112,7 @@
                             <li><a href="/host/homehost/listing">Manage listings</a></li>
                             <li><a href="/user/homeuser/profile?id=@tmp_user.id">Account</a></li>
                             <li><a href="/user/homeuser/userPersonalProfile">Host Profile</a></li>
-                            <li><a href="#">Help Center</a></li>
+                            <li><a href="mailto:tnthotel2004@gmail.com">Help Center</a></li>
                             <li class="user_log_out"><a href="/user/homeuser/Logout">Log out</a></li>
                         </ul>
                     </div>
