update responsive all page

--- a/PPl3/ExtraFiles/assets/css/profile.css
+++ b/PPl3/ExtraFiles/assets/css/profile.css
@@ -1,4 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 * {
     padding: 0;
@@ -260,7 +260,7 @@ button:hover {
         display: flex;
         justify-content: center;
     }
-
+    
     .about_container {
         width: 75%;
     }
