--- a/PPl3/ExtraFiles/assets/css/profile.css
+++ b/PPl3/ExtraFiles/assets/css/profile.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+﻿@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 * {
     padding: 0;
@@ -89,6 +89,7 @@ html {
 .verify_guest {
     display: flex;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .verify_container {
@@ -183,6 +184,8 @@ button:hover {
 }
 
 .infor_list li {
+    display: flex;
+    align-items: center;
     list-style: none;
     padding: 10px 0;
     font-size: 16px;
@@ -234,63 +237,74 @@ button:hover {
     margin-bottom: 25px;
 }
 
-    .infor_contact_item span {
-        font-size: 18px;
-        font-weight: 600;
-    }
+.infor_contact_item span {
+    font-size: 18px;
+    font-weight: 600;
+}
 
-    .infor_contact_item li {
-        list-style: none;
-        margin: 15px 0;
-    }
+.infor_contact_item li {
+    list-style: none;
+    margin: 15px 0;
+}
 
-        .infor_contact_item li > a {
-            text-decoration: none;
-            color: #000000;
-            cursor: pointer;
-        }
+.infor_contact_item li > a {
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
+}
 
-            .infor_contact_item li > a:hover {
-                border-bottom: 1px solid #000;
-            }
+.infor_contact_item li > a:hover {
+    border-bottom: 1px solid #000;
+}
 
-/* moble + tablet */
-@media screen and (max-width:739px) {
-    .about_you {
+/* Tablet */
+@media (min-width: 740px) and (max-width: 1012px){
+    .about_you{
         display: flex;
         justify-content: center;
     }
     
-    .about_container {
-        width: 75%;
-    }
-
-    .verify_container {
-        border: none;
-        width: 80%;
-    }
-}
-
-/* Mobile */
-@media screen and (max-width: 46.1875em) {
-}
-
-/* Tablet */
-@media (min-width: 740px) and (max-width: 1012px) {
-    .about_you {
-        display: flex;
-        justify-content: center;
-    }
-
-    .about_container {
+    .about_container{
         width: 55%;
     }
 
-    .verify_container {
-        border: none;
+    .verify_container{
         width: 60%;
     }
 }
+
+@media screen and (max-width: 46.1875em) {
+    .nav_languages{
+        display: none !important;
+    }
+    .about_you{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .about_container{
+        width: 75%;
+    }
+    .about_container h1{
+        text-align: center;
+    }
+    .edit_btn{
+        text-align: center;
+    }
+    .verify_guest{
+        text-align: center;
+    }
+    .interest_list{
+        justify-content: center;
+    }
+    .ask_guest{
+        text-align: center;
+    }
+    #footer{
+        text-align: center;
+    }
+}
+
 
 .icon_style {
     display: inline-block;
